Configured database connection using environment variables

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=TaskManager
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_email_password
+JAWSDB_URL='mysql://jowtcohz3s3430xt:y9kzy3r73jtg76jt@q57yawiwmnaw13d2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vg8rxbb78avlw55t'
+DB_HOST=q57yawiwmnaw13d2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+DB_USER=jowtcohz3s3430xt
+DB_PASSWORD=y9kzy3r73jtg76jt
+DB_NAME=vg8rxbb78avlw55t
+DB_PORT=3306
