--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,15 @@
+# JAWSDB_URL='mysql://jowtcohz3s3430xt:y9kzy3r73jtg76jt@q57yawiwmnaw13d2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vg8rxbb78avlw55t'
+# DB_HOST=q57yawiwmnaw13d2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+# DB_USER=jowtcohz3s3430xt
+# DB_PASSWORD=y9kzy3r73jtg76jt
+# DB_NAME=vg8rxbb78avlw55t
+# DB_PORT=3306
 JAWSDB_URL='mysql://jowtcohz3s3430xt:y9kzy3r73jtg76jt@q57yawiwmnaw13d2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vg8rxbb78avlw55t'
-DB_HOST=q57yawiwmnaw13d2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
-DB_USER=jowtcohz3s3430xt
-DB_PASSWORD=y9kzy3r73jtg76jt
-DB_NAME=vg8rxbb78avlw55t
+DB_HOST=us-cluster-east-01.k8s.cleardb.net
+DB_USER=b5e851b3e41faa
+DB_PASSWORD=12f59d12
+DB_NAME=heroku_8ef44ca6fda4553
 DB_PORT=3306
+
+
+mysql://b5e851b3e41faa:12f59d12@us-cluster-east-01.k8s.cleardb.net/heroku_8ef44ca6fda4553?reconnect=true
